Fix deprecated API usages and code quality warnings in test classes
  Resolve deprecated IOUtils.toString/toInputStream calls by adding
  StandardCharsets.UTF_8, fix raw type warnings in AsyncRequestWrapperTest,
  remove redundant primitive null-checks, and update BigDecimal test
  expectations after linter-driven constructor changes.