@@ -15,14 +15,15 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations
  * under the License.
+ *
+ * Copyright 2026 SiteNetSoft - Fixed deprecated API usages and code quality warnings
  */
 package org.sitenetsoft.olinguito.server.core.serializer.json;
 
 import java.io.IOException;
 import java.math.BigDecimal;
-import java.math.MathContext;
-import java.math.RoundingMode;
 import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
@@ -42,7 +43,6 @@ import org.sitenetsoft.olinguito.commons.api.data.Property;
 import org.sitenetsoft.olinguito.commons.api.data.ValueType;
 import org.sitenetsoft.olinguito.commons.api.edm.EdmEntityContainer;
 import org.sitenetsoft.olinguito.commons.api.edm.EdmEntitySet;
-import org.sitenetsoft.olinguito.commons.api.edmx.EdmxReference;
 import org.sitenetsoft.olinguito.commons.api.format.ContentType;
 import org.sitenetsoft.olinguito.server.api.OData;
 import org.sitenetsoft.olinguito.server.api.ServiceMetadata;
@@ -57,7 +57,7 @@ import org.junit.Test;
 public class EdmAssistedJsonSerializerV401Test {
   private static final OData oData = OData.newInstance();
   private static final ServiceMetadata metadata = oData.createServiceMetadata(
-      new EdmTechProvider(), Collections.<EdmxReference> emptyList(), null);
+      new EdmTechProvider(), Collections.emptyList(), null);
   private static final EdmEntityContainer entityContainer = metadata.getEdm().getEntityContainer();
   private final EdmAssistedSerializer serializer;
   private final EdmAssistedSerializer serializerMin;
@@ -108,7 +108,7 @@ public class EdmAssistedJsonSerializerV401Test {
         .addProperty(new Property(null, "Property1", ValueType.PRIMITIVE, 1));
     Calendar date = Calendar.getInstance(TimeZone.getTimeZone("GMT"));
     date.clear();
-    date.set(2000, 1, 29);
+    date.set(2000, Calendar.FEBRUARY, 29);
     entity.addProperty(new Property("Edm.Date", "Property2", ValueType.PRIMITIVE, date))
         .addProperty(new Property("Edm.DateTimeOffset", "Property3", ValueType.PRIMITIVE, date))
         .addProperty(new Property(null, "Property4", ValueType.COLLECTION_PRIMITIVE,
@@ -278,7 +278,7 @@ public class EdmAssistedJsonSerializerV401Test {
 
   @Test
   public void metadata() throws Exception {
-    final ServiceMetadata metadata = oData.createServiceMetadata(null, Collections.<EdmxReference> emptyList(),
+    final ServiceMetadata metadata = oData.createServiceMetadata(null, Collections.emptyList(),
         new MetadataETagSupport("W/\"42\""));
     Entity entity = new Entity();
     entity.setType("Namespace.EntityType");
@@ -319,7 +319,7 @@ public class EdmAssistedJsonSerializerV401Test {
   public void collectionEnumType() throws Exception {
     EntityCollection entityCollection = new EntityCollection();
     entityCollection.getEntities().add(
-        new Entity().addProperty(new Property(null, "Property1", ValueType.COLLECTION_ENUM, Arrays.asList(42))));
+        new Entity().addProperty(new Property(null, "Property1", ValueType.COLLECTION_ENUM, List.of(42))));
     serializer.entityCollection(metadata, null, entityCollection, null);
   }
 
@@ -378,27 +378,29 @@ public class EdmAssistedJsonSerializerV401Test {
       final EdmEntitySet edmEntitySet, final AbstractEntityCollection entityCollection, final String selectList)
       throws SerializerException, IOException {
     ContextURL.Builder contextURLBuilder = ContextURL.with();
-    contextURLBuilder = edmEntitySet == null ?
-        contextURLBuilder.entitySetOrSingletonOrType("EntitySet") :
-        contextURLBuilder.entitySet(edmEntitySet);
-    if (selectList == null && entityCollection instanceof AbstractEntityCollection) {
+    if (edmEntitySet == null) {
+      contextURLBuilder.entitySetOrSingletonOrType("EntitySet");
+    } else {
+      contextURLBuilder.entitySet(edmEntitySet);
+    }
+    if (selectList == null && entityCollection != null) {
       if (edmEntitySet == null) {
         StringBuilder names = new StringBuilder();
-        for (final Property property : 
-          ((AbstractEntityCollection)entityCollection).iterator().next().getProperties()) {
-          names.append(names.length() > 0 ? ',' : "").append(property.getName());
+        for (final Property property :
+          entityCollection.iterator().next().getProperties()) {
+          names.append(!names.isEmpty() ? ',' : "").append(property.getName());
         }
-        contextURLBuilder = contextURLBuilder.selectList(names.toString());
+        contextURLBuilder.selectList(names.toString());
       }
     } else {
-      contextURLBuilder = contextURLBuilder.selectList(selectList);
+      contextURLBuilder.selectList(selectList);
     }
     return IOUtils.toString(
         serializer.entityCollection(metadata,
             edmEntitySet == null ? null : edmEntitySet.getEntityType(),
             entityCollection,
             EdmAssistedSerializerOptions.with().contextURL(contextURLBuilder.build()).build())
-            .getContent());
+            .getContent(), StandardCharsets.UTF_8);
   }
   
   @Test
@@ -432,7 +434,7 @@ public class EdmAssistedJsonSerializerV401Test {
         .addProperty(new Property(null, "Property1", ValueType.PRIMITIVE, 1));
     Calendar date = Calendar.getInstance(TimeZone.getTimeZone("GMT"));
     date.clear();
-    date.set(2000, 1, 29);
+    date.set(2000, Calendar.FEBRUARY, 29);
     entity.addProperty(new Property("Edm.Date", "Property2", ValueType.PRIMITIVE, date))
         .addProperty(new Property("Edm.DateTimeOffset", "Property3", ValueType.PRIMITIVE, date))
         .addProperty(new Property(null, "Property4", ValueType.COLLECTION_PRIMITIVE,
@@ -462,7 +464,7 @@ public class EdmAssistedJsonSerializerV401Test {
         .addProperty(new Property(null, "Property1", ValueType.PRIMITIVE, 1));
     Calendar date = Calendar.getInstance(TimeZone.getTimeZone("GMT"));
     date.clear();
-    date.set(2000, 1, 29);
+    date.set(2000, Calendar.FEBRUARY, 29);
     entity.addProperty(new Property("Edm.Date", "Property2", ValueType.PRIMITIVE, date))
         .addProperty(new Property("Edm.DateTimeOffset", "Property3", ValueType.PRIMITIVE, date))
         .addProperty(new Property(null, "Property4", ValueType.COLLECTION_PRIMITIVE,
@@ -664,7 +666,7 @@ public class EdmAssistedJsonSerializerV401Test {
 
   @Test
   public void metadataMin() throws Exception {
-    final ServiceMetadata metadata = oData.createServiceMetadata(null, Collections.<EdmxReference> emptyList(),
+    final ServiceMetadata metadata = oData.createServiceMetadata(null, Collections.emptyList(),
         new MetadataETagSupport("W/\"42\""));
     Entity entity = new Entity();
     entity.setType("Namespace.EntityType");
@@ -690,12 +692,11 @@ public class EdmAssistedJsonSerializerV401Test {
   @Test
   public void entityCollectionWithBigDecimalProperty() throws Exception {
     EntityCollection entityCollection = new EntityCollection();
-    BigDecimal b = new BigDecimal(1.666666666666666666666666666666667);
-    b.abs(new MathContext(0, RoundingMode.UNNECESSARY));
+    BigDecimal b = new BigDecimal("1.666666666666666666666666666666667");
     entityCollection.getEntities().add(new Entity()
         .addProperty(new Property(null, "Property1", ValueType.PRIMITIVE, b)));
     Assert.assertTrue(
         serialize(serializerMin, metadata, null, entityCollection, null)
-        .contains("1.6666666666666667406815349750104360282421112060546875"));
+        .contains("1.666666666666666666666666666666667"));
   }
 }
